<resources>
    <string name="app_name">YouWeather</string>
    <string name="action_settings">Settings</string>
    <string name="city">city</string>
    <string name="temperature">Temp</string>
    <string name="lTemp">Lowest </string>
    <string name="hTemp">Highest </string>
    <string name="weather">Weather</string>
    <string name="windSpeed">Wind speed</string>
    <string name="windDirection">Wind Direction </string>
    <string name="sunRise">Sun rise</string>
    <string name="sunSet">Sun set</string>
    <string name="time">Update time</string>
    <string name="currentCity">Current city</string>
</resources>