<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical"
    tools:context=".YouWeather" >

    <Spinner
        android:id="@+id/spinCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2" />

    <TextView
        android:id="@+id/tv_currentCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.64"
        android:text="@string/currentCity" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.64"
        android:text="@string/time" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_tmp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/temperature" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_ltmp"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/lTemp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_htmp"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/hTemp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_wether"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.64"
        android:text="@string/weather" />

    <TextView
        android:id="@+id/tv_ws"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.64"
        android:text="@string/windSpeed" />

    <TextView
        android:id="@+id/tv_wd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.64"
        android:text="@string/windDirection" />

    <TextView
        android:id="@+id/tv_sr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.64"
        android:text="@string/sunRise" />

    <TextView
        android:id="@+id/tv_ss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.64"
        android:text="@string/sunSet" />

</LinearLayout>